fix: text-nowrap

--- a/app/components/irelia/button/index.pcss
+++ b/app/components/irelia/button/index.pcss
@@ -1,6 +1,6 @@
 @layer components {
   .irelia-button {
-    @apply inline-flex justify-center items-center cursor-pointer rounded no-underline transition;
+    @apply inline-flex justify-center items-center cursor-pointer rounded no-underline transition text-nowrap;
   }
 
   .irelia-button--default {
